--- a/.github/workflows/issue-automation.yml
+++ b/.github/workflows/issue-automation.yml
@@ -59,6 +59,35 @@ jobs:
               }
             }
 
+      - name: Ensure milestone v1.0.0 exists
+        uses: actions/github-script@v7
+        with:
+          script: |
+            const milestoneTitle = 'v1.0.0';
+            try {
+              const { data: milestones } = await github.rest.issues.listMilestones({
+                owner: context.repo.owner,
+                repo: context.repo.repo,
+                state: 'open'
+              });
+              const milestone = milestones.find(m => m.title === milestoneTitle);
+              if (milestone) {
+                console.log(`Milestone "${milestoneTitle}" already exists.`);
+                return;
+              }
+            } catch (error) {
+              console.log('Error fetching milestones:', error);
+            }
+            // Create milestone
+            console.log(`Creating milestone "${milestoneTitle}"...`);
+            await github.rest.issues.createMilestone({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              title: milestoneTitle,
+              description: 'Initial release milestone',
+              state: 'open'
+            });
+
   issue-triage:
     needs: setup-labels
     if: github.event_name == 'issues' && (github.event.action == 'opened' || github.event.action == 'labeled')
@@ -305,34 +334,30 @@ jobs:
               console.log('No high/critical priority label, skipping milestone.');
               return;
             }
-            // Get milestone "v1.0.0" or create it
+            // Get milestone "v1.0.0"
             const milestoneTitle = 'v1.0.0';
-            let milestone;
             try {
               const { data: milestones } = await github.rest.issues.listMilestones({
                 owner: context.repo.owner,
                 repo: context.repo.repo,
                 state: 'open'
               });
-              milestone = milestones.find(m => m.title === milestoneTitle);
+              const milestone = milestones.find(m => m.title === milestoneTitle);
+              if (milestone) {
+                // Assign milestone to issue
+                await github.rest.issues.update({
+                  owner: context.repo.owner,
+                  repo: context.repo.repo,
+                  issue_number: context.payload.issue.number,
+                  milestone: milestone.number
+                });
+                console.log(`Assigned milestone "${milestoneTitle}" to issue #${context.payload.issue.number}`);
+              } else {
+                console.log(`Milestone "${milestoneTitle}" not found.`);
+              }
             } catch (error) {
               console.log('Error fetching milestones:', error);
-              return;
             }
-            
-            if (!milestone) {
-              console.log(`Milestone "${milestoneTitle}" not found, skipping.`);
-              // Optionally create milestone, but we'll skip for simplicity
-              return;
-            }
-            
-            // Assign milestone to issue
-            await github.rest.issues.update({
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              issue_number: context.payload.issue.number,
-              milestone: milestone.number
-            });
 
       - name: Update status from needs-triage to needs-review
         uses: actions/github-script@v7
