--- a/.github/workflows/issue-automation.yml
+++ b/.github/workflows/issue-automation.yml
@@ -7,6 +7,10 @@ on:
 env:
   GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
+permissions:
+  issues: write
+  contents: read
+
 jobs:
   setup-labels:
     runs-on: ubuntu-latest
