--- a/.github/workflows/issue-automation.yml
+++ b/.github/workflows/issue-automation.yml
@@ -181,7 +181,7 @@ jobs:
 
   task-breakdown:
     needs: [setup-labels, issue-triage]
-    if: github.event_name == 'issues' && github.event.action == 'opened' && contains(github.event.issue.title, 'Epic')
+    if: github.event_name == 'issues' && github.event.action == 'opened' && (contains(github.event.issue.title, 'Epic') || contains(github.event.issue.title, 'epic') || contains(github.event.issue.title, 'EPIC'))
     runs-on: ubuntu-latest
     steps:
       - name: Create sub-issues for Epic
@@ -281,15 +281,30 @@ jobs:
               body: '👋 Welcome to the project! Thanks for opening your first issue in this repository. Our maintainers will review it shortly.'
             });
 
+      - name: Fetch latest issue data
+        uses: actions/github-script@v7
+        id: fetch-issue
+        with:
+          script: |
+            const { data: issue } = await github.rest.issues.get({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              issue_number: context.payload.issue.number
+            });
+            console.log('Fetched issue labels:', issue.labels.map(l => l.name));
+            core.setOutput('labels', JSON.stringify(issue.labels));
+
       - name: Determine issue type for response
         uses: actions/github-script@v7
         id: issue-type
+        env:
+          LABELS: ${{ steps.fetch-issue.outputs.labels }}
         with:
           script: |
-            const { issue } = context.payload;
-            const bugLabels = issue.labels.filter(l => l.name === 'bug');
-            const epicLabels = issue.labels.filter(l => l.name === 'epic');
-            const maintenanceLabels = issue.labels.filter(l => l.name === 'maintenance');
+            const labels = JSON.parse(process.env.LABELS);
+            const bugLabels = labels.filter(l => l.name === 'bug');
+            const epicLabels = labels.filter(l => l.name === 'epic');
+            const maintenanceLabels = labels.filter(l => l.name === 'maintenance');
             let type = 'other';
             if (bugLabels.length > 0) {
               type = 'bug';
@@ -329,10 +344,10 @@ jobs:
       - name: Set milestone for high/critical priority issues
         uses: actions/github-script@v7
         env:
-          PRIORITY_LABELS: ${{ toJSON(github.event.issue.labels) }}
+          LABELS: ${{ steps.fetch-issue.outputs.labels }}
         with:
           script: |
-            const labels = JSON.parse(process.env.PRIORITY_LABELS);
+            const labels = JSON.parse(process.env.LABELS);
             const hasHighPriority = labels.some(l => l.name === 'priority-high' || l.name === 'priority-critical');
             if (!hasHighPriority) {
               console.log('No high/critical priority label, skipping milestone.');
@@ -365,23 +380,24 @@ jobs:
 
       - name: Update status from needs-triage to needs-review
         uses: actions/github-script@v7
+        env:
+          LABELS: ${{ steps.fetch-issue.outputs.labels }}
         with:
           script: |
-            const { issue } = context.payload;
-            // Check if needs-triage label exists
-            const hasNeedsTriage = issue.labels.some(l => l.name === 'needs-triage');
+            const labels = JSON.parse(process.env.LABELS);
+            const hasNeedsTriage = labels.some(l => l.name === 'needs-triage');
             if (hasNeedsTriage) {
               // Remove needs-triage and add needs-review
               await github.rest.issues.removeLabel({
                 owner: context.repo.owner,
                 repo: context.repo.repo,
-                issue_number: issue.number,
+                issue_number: context.payload.issue.number,
                 name: 'needs-triage'
               });
               await github.rest.issues.addLabels({
                 owner: context.repo.owner,
                 repo: context.repo.repo,
-                issue_number: issue.number,
+                issue_number: context.payload.issue.number,
                 labels: ['needs-review']
               });
             }
